test/fixtures/fixtures/type-error/noOverload.lys.ast.desugar
|-Document(0,90)
  |-(AstCons)
    |-(AstCons)
      |-(AstCons)
        |-FunctionDirective(0,24)
          |-(AstCons)
            |-Decorators(0,0)
              <Rule0>
            |-(AstCons)
              |-PrivateModifier(0,8)
                <Rule0>
              |-FunDeclaration(8,24)
                |-(AstCons)
                  |-NameIdentifier(12,13)
                    |-Identifier=x
                  |-(AstCons)
                    |-TypeParameters(13,13)
                      <Rule0>
                    |-(AstCons)
                      |-FunctionParamsList(13,15)
                        |-(List)(14,14)
                          <Rule0>
                      |-(AstCons)
                        |-ReturnType(15,21)
                          |-Reference(17,20)
                            |-QName(17,20)
                              |-NameIdentifier(17,20)
                                |-Identifier=i32
                        |-FunctionBody(21,24)
                          |-NumberLiteral=1
        |-FunctionDirective(25,59)
          |-(AstCons)
            |-Decorators(25,25)
              <Rule0>
            |-(AstCons)
              |-PrivateModifier(25,33)
                <Rule0>
              |-FunDeclaration(33,59)
                |-(AstCons)
                  |-NameIdentifier(37,38)
                    |-Identifier=x
                  |-(AstCons)
                    |-TypeParameters(38,38)
                      <Rule0>
                    |-(AstCons)
                      |-FunctionParamsList(38,50)
                        |-(List)(39,49)
                          |-Parameter(39,49)
                            |-(AstCons)
                              |-NameIdentifier(39,40)
                                |-Identifier=a
                              |-Reference(42,49)
                                |-QName(42,49)
                                  |-NameIdentifier(42,49)
                                    |-Identifier=boolean
                      |-(AstCons)
                        |-ReturnType(50,56)
                          |-Reference(52,55)
                            |-QName(52,55)
                              |-NameIdentifier(52,55)
                                |-Identifier=i32
                        |-FunctionBody(56,59)
                          |-NumberLiteral=1
      |-FunctionDirective(61,89)
        |-(AstCons)
          |-Decorators(61,61)
            <Rule0>
          |-(AstCons)
            |-NoModifier(61,61)
              <Rule0>
            |-FunDeclaration(61,89)
              |-(AstCons)
                |-NameIdentifier(65,69)
                  |-Identifier=test
                |-(AstCons)
                  |-TypeParameters(69,69)
                    <Rule0>
                  |-(AstCons)
                    |-FunctionParamsList(69,77)
                      |-(List)(70,76)
                        |-Parameter(70,76)
                          |-(AstCons)
                            |-NameIdentifier(70,71)
                              |-Identifier=a
                            |-Reference(73,76)
                              |-QName(73,76)
                                |-NameIdentifier(73,76)
                                  |-Identifier=f32
                    |-(AstCons)
                      |-ReturnType(77,83)
                        |-Reference(79,82)
                          |-QName(79,82)
                            |-NameIdentifier(79,82)
                              |-Identifier=i32
                      |-FunctionBody(83,89)
                        |-AtomicExpression(85,89)
                          |-(AstCons)
                            |-Reference(85,86)
                              |-QName(85,86)
                                |-NameIdentifier(85,86)
                                  |-Identifier=x
                            |-CallArguments(86,89)
                              |-Reference(87,88)
                                |-QName(87,88)
                                  |-NameIdentifier(87,88)
                                    |-Identifier=a
    |-EndOfFile=